--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,13 +3,10 @@ name: Deploy to Render
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
-  deploy:
+  build-and-export:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
     
     steps:
     - uses: actions/checkout@v3
@@ -24,8 +21,8 @@ jobs:
         mkdir -p export/linux_server
         godot --headless --export "Linux Headless Server" export/linux_server/godot_server.x86_64
     
-    - name: Deploy to Render
-      uses: johnbeynon/render-deploy-action@v0.0.8
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v3
       with:
-        service-id: ${{ secrets.RENDER_SERVICE_ID }}
-        api-key: ${{ secrets.RENDER_API_KEY }}
+        name: linux-server
+        path: export/linux_server/
