--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -22,3 +22,15 @@ exclude_filter=""
 export_path="export/windows/godot_game.exe"
 script_export_mode=1
 script_encryption_key=""
+
+[preset.2]
+name="macOS Desktop"
+platform="macOS"
+runnable=true
+dedicated_server=false
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="export/mac/godot_game.dmg"
+script_export_mode=1
+script_encryption_key=""
